z-index fixes for www

--- a/src/css/utk-lib-header.css
+++ b/src/css/utk-lib-header.css
@@ -211,7 +211,6 @@ body {
   position: fixed;
   left: 0;
   top: 0;
-  height: 129px;
   z-index: 100;
   width: 100%;
   border-top: 6px solid #ff8200;
@@ -1081,6 +1080,9 @@ a:hover {
   top: 170px;
   transition: all 290ms ease-in-out;
   opacity: 0;
+  z-index: 1;
+  height: 0;
+  overflow: hidden;
   /* Mobile Devices for Mice */
   /* Landscape phones and down */
   /* Landscape phone to portrait tablet */
@@ -1364,12 +1366,13 @@ a:hover {
   position: fixed;
   width: 100%;
   overflow: hidden;
-  top: 129px;
+  top: -76px;
   opacity: 0;
-  z-index: 1;
+  z-index: 3;
   background-color: #333; }
 
 body.utk-search-open .utk-header-search {
+  top: 129px;
   opacity: 1;
   height: 76px; }
 
