--- a/src/scss/components/_resources.scss
+++ b/src/scss/components/_resources.scss
@@ -145,6 +145,9 @@
   top: 170px;
   transition: $transition-all;
   opacity: 0;
+  z-index: 1;
+  height: 0;
+  overflow: hidden;
 
   @include respond(xs, sm, md) {
     display: none;
