--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -2,7 +2,6 @@
   position: fixed;
   left: 0;
   top: 0;
-  height: 129px;
   z-index: 100;
   width: 100%;
   border-top: 6px solid $orange;
